# pyDigestor

./: .dockerignore  .env.example  .gitignore  DAY3-4_COMPLETION.md  DAY5_COMPLETION.md  FIX_RSS_SUMMARIZATION.md  PR_DESCRIPTION.md  README.md  TESTING.md  TEST_RESULTS.md  alembic.ini  config.example.toml  config.example.yaml  pyproject.toml  setup-native.sh  test_content_fix.py  test_github_pattern.py  test_ingestion_flow.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_migrate_to_sqlite.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: IMPLEMENTATION_PLAN.md  SQLITE_MIGRATION_PLAN_OPTION_A.md  architecture-critique.md  architecture.md  config-file-organization-analysis.md  configuration-separation.md  feed sources.md  local summarization.md  modular-components-plan.md  native-vs-docker.md  pattern extraction plan.md  pdf support summary.md  playwright-plugin-implementation-plan.md  pluggy-architecture-review.md  plugins.md  project summary.md  quick start.md  readme.md  recipe-based-architecture.md  reddit implementation plan updated.md  single-file-config-implementation.md  site-configuration-design.md
poc/: ADAPTIVE_STRATEGY.md  FINDINGS.md  IMPLEMENTATION_GUIDE.md  README.md  RESULTS_SUMMARY.md  adaptive_wait_strategy.py  httpx_scraping_comparison.py  playwright_adaptive_poc.py  playwright_enhanced_poc.py  playwright_scraping_poc.py  test_groupib_only.py  test_new_urls.md  test_new_urls_only.py
pydigestor-playwright/: LICENSE  README.md  pyproject.toml
pydigestor-playwright/examples/: basic_usage.py
pydigestor-playwright/pydigestor_playwright/: __init__.py  extractor.py
pydigestor-playwright/tests/: __init__.py  test_extractor.py  test_plugin.py
src/pydigestor/: cli.py  config.py  database.py  hookspecs.py  models.py  plugins.py
src/pydigestor/search/: embeddings.py  fts.py  hybrid.py  tfidf.py  vector.py
src/pydigestor/sources/: __init__.py  extraction.py  feeds.py  reddit.py
src/pydigestor/steps/: ingest.py  summarize.py
src/pydigestor/utils/: __init__.py  rate_limit.py
tests/: conftest.py  test_config.py  test_database.py  test_models.py  test_plugins.py
tests/sources/: test_extraction.py  test_feeds.py  test_reddit.py
tests/steps/: test_ingest.py  test_summarize.py
tests/utils/: test_rate_limit.py
