[project]
name = "pydigestor"
version = "0.1.0"
description = "Feed aggregation and analysis pipeline for security content"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "pyDigestor Team"}
]
dependencies = [
    "feedparser>=6.0.10",
    "httpx>=0.25.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "litellm>=1.0.0",
    "sumy>=0.11.0",
    "nltk>=3.8.0",
    "trafilatura>=1.6.0",
    "newspaper3k>=0.2.8",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
pydigestor = "pydigestor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v -s --strict-markers"
markers = [
    "integration: integration tests (slower)",
    "unit: unit tests (fast)",
]

[tool.coverage.run]
source = ["src/pydigestor"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
]
